--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,325 @@
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100;200;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
+body{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: 'Martian Mono', monospace;
+}
+
 .App {
   text-align: center;
 }
+
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #3E1E68;
+    overflow: hidden;
+}
+
+.background span {
+    width: 19vmin;
+    height: 19vmin;
+    border-radius: 19vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 45;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+    color: #E45A84;
+    top: 56%;
+    left: 68%;
+    animation-duration: 21s;
+    animation-delay: -32s;
+    transform-origin: -13vw -1vh;
+    box-shadow: 38vmin 0 5.007377506848109vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: #E45A84;
+    top: 70%;
+    left: 60%;
+    animation-duration: 23s;
+    animation-delay: -10s;
+    transform-origin: -10vw 2vh;
+    box-shadow: 38vmin 0 4.988001465242132vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #583C87;
+    top: 93%;
+    left: 28%;
+    animation-duration: 25s;
+    animation-delay: -33s;
+    transform-origin: -24vw -13vh;
+    box-shadow: -38vmin 0 5.4940665386630405vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #583C87;
+    top: 38%;
+    left: 14%;
+    animation-duration: 37s;
+    animation-delay: -10s;
+    transform-origin: 25vw 7vh;
+    box-shadow: -38vmin 0 5.677236761238224vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: #583C87;
+    top: 58%;
+    left: 13%;
+    animation-duration: 38s;
+    animation-delay: -21s;
+    transform-origin: 11vw -22vh;
+    box-shadow: -38vmin 0 5.514686880943003vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: #583C87;
+    top: 12%;
+    left: 81%;
+    animation-duration: 37s;
+    animation-delay: -41s;
+    transform-origin: 24vw -17vh;
+    box-shadow: -38vmin 0 5.20838220731555vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: #583C87;
+    top: 86%;
+    left: 37%;
+    animation-duration: 52s;
+    animation-delay: -23s;
+    transform-origin: -11vw 14vh;
+    box-shadow: -38vmin 0 5.595385235401411vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: #583C87;
+    top: 67%;
+    left: 77%;
+    animation-duration: 14s;
+    animation-delay: -9s;
+    transform-origin: -15vw 4vh;
+    box-shadow: -38vmin 0 4.932240075005052vmin currentColor;
+}
+.background span:nth-child(8) {
+    color: #E45A84;
+    top: 55%;
+    left: 63%;
+    animation-duration: 7s;
+    animation-delay: -11s;
+    transform-origin: -23vw 16vh;
+    box-shadow: 38vmin 0 5.71524217678717vmin currentColor;
+}
+.background span:nth-child(9) {
+    color: #FFACAC;
+    top: 14%;
+    left: 65%;
+    animation-duration: 51s;
+    animation-delay: -12s;
+    transform-origin: 1vw -9vh;
+    box-shadow: -38vmin 0 5.59004224816419vmin currentColor;
+}
+.background span:nth-child(10) {
+    color: #E45A84;
+    top: 92%;
+    left: 99%;
+    animation-duration: 38s;
+    animation-delay: -45s;
+    transform-origin: 13vw 11vh;
+    box-shadow: 38vmin 0 5.228677922758353vmin currentColor;
+}
+.background span:nth-child(11) {
+    color: #E45A84;
+    top: 14%;
+    left: 85%;
+    animation-duration: 36s;
+    animation-delay: -9s;
+    transform-origin: 2vw 0vh;
+    box-shadow: -38vmin 0 4.836212860412679vmin currentColor;
+}
+.background span:nth-child(12) {
+    color: #583C87;
+    top: 84%;
+    left: 68%;
+    animation-duration: 13s;
+    animation-delay: -12s;
+    transform-origin: 11vw -1vh;
+    box-shadow: 38vmin 0 5.396710683675278vmin currentColor;
+}
+.background span:nth-child(13) {
+    color: #E45A84;
+    top: 19%;
+    left: 73%;
+    animation-duration: 43s;
+    animation-delay: -2s;
+    transform-origin: -12vw -19vh;
+    box-shadow: 38vmin 0 4.9805317050854505vmin currentColor;
+}
+.background span:nth-child(14) {
+    color: #583C87;
+    top: 20%;
+    left: 2%;
+    animation-duration: 39s;
+    animation-delay: -30s;
+    transform-origin: 2vw -16vh;
+    box-shadow: -38vmin 0 4.939864706661993vmin currentColor;
+}
+.background span:nth-child(15) {
+    color: #FFACAC;
+    top: 12%;
+    left: 56%;
+    animation-duration: 49s;
+    animation-delay: -41s;
+    transform-origin: 22vw 20vh;
+    box-shadow: -38vmin 0 4.775029067294307vmin currentColor;
+}
+.background span:nth-child(16) {
+    color: #E45A84;
+    top: 37%;
+    left: 32%;
+    animation-duration: 33s;
+    animation-delay: -48s;
+    transform-origin: -11vw 8vh;
+    box-shadow: -38vmin 0 5.710846791660245vmin currentColor;
+}
+.background span:nth-child(17) {
+    color: #FFACAC;
+    top: 53%;
+    left: 3%;
+    animation-duration: 9s;
+    animation-delay: -29s;
+    transform-origin: -20vw 4vh;
+    box-shadow: -38vmin 0 5.74308699128255vmin currentColor;
+}
+.background span:nth-child(18) {
+    color: #E45A84;
+    top: 99%;
+    left: 86%;
+    animation-duration: 9s;
+    animation-delay: -37s;
+    transform-origin: -18vw 18vh;
+    box-shadow: -38vmin 0 5.593719504170503vmin currentColor;
+}
+.background span:nth-child(19) {
+    color: #E45A84;
+    top: 71%;
+    left: 72%;
+    animation-duration: 19s;
+    animation-delay: -15s;
+    transform-origin: 0vw -14vh;
+    box-shadow: 38vmin 0 4.835044308257821vmin currentColor;
+}
+.background span:nth-child(20) {
+    color: #583C87;
+    top: 58%;
+    left: 55%;
+    animation-duration: 6s;
+    animation-delay: -13s;
+    transform-origin: 0vw 14vh;
+    box-shadow: -38vmin 0 5.698037063242339vmin currentColor;
+}
+.background span:nth-child(21) {
+    color: #FFACAC;
+    top: 26%;
+    left: 35%;
+    animation-duration: 30s;
+    animation-delay: -25s;
+    transform-origin: 2vw 23vh;
+    box-shadow: 38vmin 0 5.457167120041202vmin currentColor;
+}
+.background span:nth-child(22) {
+    color: #583C87;
+    top: 58%;
+    left: 34%;
+    animation-duration: 29s;
+    animation-delay: -22s;
+    transform-origin: 6vw -20vh;
+    box-shadow: -38vmin 0 4.859303185612745vmin currentColor;
+}
+.background span:nth-child(23) {
+    color: #583C87;
+    top: 59%;
+    left: 81%;
+    animation-duration: 47s;
+    animation-delay: -3s;
+    transform-origin: 5vw 3vh;
+    box-shadow: 38vmin 0 5.124169859055179vmin currentColor;
+}
+.background span:nth-child(24) {
+    color: #FFACAC;
+    top: 7%;
+    left: 32%;
+    animation-duration: 43s;
+    animation-delay: -24s;
+    transform-origin: 6vw 20vh;
+    box-shadow: -38vmin 0 4.976891787605687vmin currentColor;
+}
+.background span:nth-child(25) {
+    color: #E45A84;
+    top: 93%;
+    left: 68%;
+    animation-duration: 10s;
+    animation-delay: -23s;
+    transform-origin: 11vw -15vh;
+    box-shadow: -38vmin 0 5.741785345232882vmin currentColor;
+}
+.background span:nth-child(26) {
+    color: #583C87;
+    top: 95%;
+    left: 60%;
+    animation-duration: 51s;
+    animation-delay: -36s;
+    transform-origin: -18vw 25vh;
+    box-shadow: 38vmin 0 5.582591061851247vmin currentColor;
+}
+.background span:nth-child(27) {
+    color: #583C87;
+    top: 33%;
+    left: 78%;
+    animation-duration: 23s;
+    animation-delay: -20s;
+    transform-origin: 25vw 6vh;
+    box-shadow: 38vmin 0 5.6606072850708316vmin currentColor;
+}
+.background span:nth-child(28) {
+    color: #FFACAC;
+    top: 81%;
+    left: 55%;
+    animation-duration: 41s;
+    animation-delay: -44s;
+    transform-origin: 16vw 3vh;
+    box-shadow: -38vmin 0 5.602206531218279vmin currentColor;
+}
+.background span:nth-child(29) {
+    color: #E45A84;
+    top: 86%;
+    left: 71%;
+    animation-duration: 55s;
+    animation-delay: -8s;
+    transform-origin: -9vw 14vh;
+    box-shadow: 38vmin 0 5.618731298773273vmin currentColor;
+}
+.background span:nth-child(30) {
+    color: #583C87;
+    top: 6%;
+    left: 72%;
+    animation-duration: 54s;
+    animation-delay: -33s;
+    transform-origin: -7vw -3vh;
+    box-shadow: 38vmin 0 5.746245603482665vmin currentColor;
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +354,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App .container{
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
+  background-color: #583C87;
+  color:#FFACAC;
+  width: 70%;
+  height: 100%;
 }
