--- a/src/components/ProjectsCards/ProjectsCards.css
+++ b/src/components/ProjectsCards/ProjectsCards.css
@@ -11,11 +11,12 @@
 	margin-bottom: 20px;
 }
 
-.ProjectsCards .cards-container{
-	/*border: 2px solid red;*/
+.ProjectsCards .cards-container{	
+	position: relative;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
+	cursor: pointer;
 }
 
 .ProjectsCards .cards-container div{
@@ -25,7 +26,25 @@
 	width: 350px;
 }
 
-.ProjectsCards .cards-container div img{
+.ProjectsCards .cards-container div:hover{
+	animation: zoom-in-zoom-out 1s ease infinite;
+	-webkit-box-shadow: 4px 7px 40px -3px rgba(0,0,0,0.25);
+	-moz-box-shadow: 4px 7px 40px -3px rgba(0,0,0,0.25);
+	box-shadow: 4px 7px 40px -3px rgba(0,0,0,0.25);
+}
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+.ProjectsCards .cards-container .card img{
 	width: 350px;
 	height: 200px;
 	object-fit: cover;
