--- a/src/components/ProjectsCards/ProjectsCards.css
+++ b/src/components/ProjectsCards/ProjectsCards.css
@@ -44,7 +44,7 @@
   }
 }
 
-.ProjectsCards .cards-container .card img{
+.ProjectsCards .cards-container img{
 	width: 350px;
 	height: 200px;
 	object-fit: cover;
