--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -65,3 +65,16 @@
 .Hero .hero-right img:hover .overlay{
 	width: 100%;
 }
+
+@media only screen and (max-width: 700px) {
+	.Hero{
+		flex-direction: column;
+		border: red solid 2px;
+		margin: 40px 0px;
+	}
+	.Hero .hero-left{
+		border: green solid 2px;
+		padding: 0px 20px;
+		width: 90%;
+	}
+}
